--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -1,12 +1,13 @@
 {
-    "extends": "./tsconfig.json",
+    "extends": "../tsconfig.json",
     "compilerOptions": {
         "outDir": "../out-tsc/spec",
         "baseUrl": "./",
-        "types": ["jest", "node", "electron"],
+        "types": ["jest", "node"],
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "esModuleInterop": true
     },
     "files": ["src/polyfills.ts"],
     "include": ["**/*.spec.ts", "**/*.d.ts"]
